data/derived/comb/progs/unify/prog3561.ml.out
Characters 69-82:
  else let n2 = [n mod 10] @ digitsOfInt n/10 in
                             ^^^^^^^^^^^^^
Error: This expression has type 'a list
       but an expression was expected of type int
